--- a/login.html
+++ b/login.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html>
+<head>
 
-<body>
+<link rel="stylesheet" href="bitnami.css">
 
-<h2>Login</h2>
+</head>
+<body class="login">
+
+  <h2 class="loginH2"></h2>
 
 <div id="id01" class="modal">
 
   <form class="loginPage" action="/action_page.php" method="post">
     <div class="container">
-      <label for="uname"><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
+
+
+      <label for="uname"><b>Email/Username</b></label>
+      <input type="text" placeholder="Enter Username" name="uname" id = "uname" required>
 
       <label for="psw"><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
+      <input type="password" placeholder="Enter Password" name="psw" id = "psw" required>
 
-      <button type="submit">Login</button>
-      <label>
-        <input type="checkbox" checked="checked" name="remember"> Remember me
-      </label>
+      <button type="submit" id = "log">Login as Staff</button>
+         <button type="submit" id = "logMan">Login as Manager</button>
     </div>
 
     <div class="container" style="background-color:#f1f1f1">
-      <span class="psw">Forgot <a href="#">password?</a></span>
     </div>
   </form>
 </div>
