--- a/cal.html
+++ b/cal.html
@@ -55,6 +55,8 @@
 
 <body>
     <div id="calendar"></div>
+    <div class="notifications"><button class="notif-button">Notifications</button></div>
+
 </body>
 
 </html>
