Added navigation buttons

--- a/cal.html
+++ b/cal.html
@@ -55,7 +55,12 @@
 
 <body>
     <div id="calendar"></div>
-    <div class="notifications"><button class="notif-button">Notifications</button></div>
+    <div class="notifications">
+        <button class="notif-button">My Profile Page</button>
+        <button class="notif-button">Notifications</button>
+        <button class="notif-button">Calendar</button>
+        <button class="notif-button">Logout</button>
+    </div>
 
 </body>
 
