--- a/shift.html
+++ b/shift.html
@@ -40,6 +40,11 @@
                 </div>
         </form>
     </div>
+    <div class="notifications">
+        <button class="notif-button">My Profile Page</button>
+        <button class="notif-button">Calendar</button>
+        <button class="notif-button">Logout</button>
+    </div>
 </body>
 
 </html>
